# serializer version: 1
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_tgz_with_explicit_index_js_works
  '''
  SELECT "clairview_pluginsourcefile"."id",
         "clairview_pluginsourcefile"."plugin_id",
         "clairview_pluginsourcefile"."filename",
         "clairview_pluginsourcefile"."source",
         "clairview_pluginsourcefile"."status",
         "clairview_pluginsourcefile"."transpiled",
         "clairview_pluginsourcefile"."error",
         "clairview_pluginsourcefile"."updated_at"
  FROM "clairview_pluginsourcefile"
  WHERE ("clairview_pluginsourcefile"."filename" = 'plugin.json'
         AND "clairview_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_tgz_with_explicit_index_js_works.1
  '''
  SELECT "clairview_pluginsourcefile"."id",
         "clairview_pluginsourcefile"."plugin_id",
         "clairview_pluginsourcefile"."filename",
         "clairview_pluginsourcefile"."source",
         "clairview_pluginsourcefile"."status",
         "clairview_pluginsourcefile"."transpiled",
         "clairview_pluginsourcefile"."error",
         "clairview_pluginsourcefile"."updated_at"
  FROM "clairview_pluginsourcefile"
  WHERE ("clairview_pluginsourcefile"."filename" = 'index.ts'
         AND "clairview_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_tgz_with_explicit_index_js_works.2
  '''
  SELECT COUNT(*) AS "__count"
  FROM "clairview_pluginsourcefile"
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_tgz_with_explicit_index_js_works.3
  '''
  SELECT "clairview_pluginsourcefile"."id",
         "clairview_pluginsourcefile"."plugin_id",
         "clairview_pluginsourcefile"."filename",
         "clairview_pluginsourcefile"."source",
         "clairview_pluginsourcefile"."status",
         "clairview_pluginsourcefile"."transpiled",
         "clairview_pluginsourcefile"."error",
         "clairview_pluginsourcefile"."updated_at"
  FROM "clairview_pluginsourcefile"
  WHERE ("clairview_pluginsourcefile"."filename" = 'plugin.json'
         AND "clairview_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_tgz_with_explicit_index_js_works.4
  '''
  SELECT "clairview_pluginsourcefile"."id",
         "clairview_pluginsourcefile"."plugin_id",
         "clairview_pluginsourcefile"."filename",
         "clairview_pluginsourcefile"."source",
         "clairview_pluginsourcefile"."status",
         "clairview_pluginsourcefile"."transpiled",
         "clairview_pluginsourcefile"."error",
         "clairview_pluginsourcefile"."updated_at"
  FROM "clairview_pluginsourcefile"
  WHERE ("clairview_pluginsourcefile"."filename" = 'index.ts'
         AND "clairview_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_tgz_with_explicit_index_js_works.5
  '''
  SELECT COUNT(*) AS "__count"
  FROM "clairview_pluginsourcefile"
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_with_explicit_index_js_works
  '''
  SELECT "clairview_pluginsourcefile"."id",
         "clairview_pluginsourcefile"."plugin_id",
         "clairview_pluginsourcefile"."filename",
         "clairview_pluginsourcefile"."source",
         "clairview_pluginsourcefile"."status",
         "clairview_pluginsourcefile"."transpiled",
         "clairview_pluginsourcefile"."error",
         "clairview_pluginsourcefile"."updated_at"
  FROM "clairview_pluginsourcefile"
  WHERE ("clairview_pluginsourcefile"."filename" = 'plugin.json'
         AND "clairview_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_with_explicit_index_js_works.1
  '''
  SELECT "clairview_pluginsourcefile"."id",
         "clairview_pluginsourcefile"."plugin_id",
         "clairview_pluginsourcefile"."filename",
         "clairview_pluginsourcefile"."source",
         "clairview_pluginsourcefile"."status",
         "clairview_pluginsourcefile"."transpiled",
         "clairview_pluginsourcefile"."error",
         "clairview_pluginsourcefile"."updated_at"
  FROM "clairview_pluginsourcefile"
  WHERE ("clairview_pluginsourcefile"."filename" = 'index.ts'
         AND "clairview_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_with_explicit_index_js_works.2
  '''
  SELECT COUNT(*) AS "__count"
  FROM "clairview_pluginsourcefile"
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_with_index_ts_works
  '''
  SELECT "clairview_pluginsourcefile"."id",
         "clairview_pluginsourcefile"."plugin_id",
         "clairview_pluginsourcefile"."filename",
         "clairview_pluginsourcefile"."source",
         "clairview_pluginsourcefile"."status",
         "clairview_pluginsourcefile"."transpiled",
         "clairview_pluginsourcefile"."error",
         "clairview_pluginsourcefile"."updated_at"
  FROM "clairview_pluginsourcefile"
  WHERE ("clairview_pluginsourcefile"."filename" = 'plugin.json'
         AND "clairview_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_with_index_ts_works.1
  '''
  SELECT "clairview_pluginsourcefile"."id",
         "clairview_pluginsourcefile"."plugin_id",
         "clairview_pluginsourcefile"."filename",
         "clairview_pluginsourcefile"."source",
         "clairview_pluginsourcefile"."status",
         "clairview_pluginsourcefile"."transpiled",
         "clairview_pluginsourcefile"."error",
         "clairview_pluginsourcefile"."updated_at"
  FROM "clairview_pluginsourcefile"
  WHERE ("clairview_pluginsourcefile"."filename" = 'index.ts'
         AND "clairview_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_with_index_ts_works.2
  '''
  SELECT COUNT(*) AS "__count"
  FROM "clairview_pluginsourcefile"
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_without_index_ts_but_frontend_tsx_works
  '''
  SELECT "clairview_pluginsourcefile"."id",
         "clairview_pluginsourcefile"."plugin_id",
         "clairview_pluginsourcefile"."filename",
         "clairview_pluginsourcefile"."source",
         "clairview_pluginsourcefile"."status",
         "clairview_pluginsourcefile"."transpiled",
         "clairview_pluginsourcefile"."error",
         "clairview_pluginsourcefile"."updated_at"
  FROM "clairview_pluginsourcefile"
  WHERE ("clairview_pluginsourcefile"."filename" = 'plugin.json'
         AND "clairview_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_without_index_ts_but_frontend_tsx_works.1
  '''
  SELECT "clairview_pluginsourcefile"."id",
         "clairview_pluginsourcefile"."plugin_id",
         "clairview_pluginsourcefile"."filename",
         "clairview_pluginsourcefile"."source",
         "clairview_pluginsourcefile"."status",
         "clairview_pluginsourcefile"."transpiled",
         "clairview_pluginsourcefile"."error",
         "clairview_pluginsourcefile"."updated_at"
  FROM "clairview_pluginsourcefile"
  WHERE ("clairview_pluginsourcefile"."filename" = 'frontend.tsx'
         AND "clairview_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_without_index_ts_but_frontend_tsx_works.2
  '''
  SELECT COUNT(*) AS "__count"
  FROM "clairview_pluginsourcefile"
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_without_index_ts_but_site_ts_works
  '''
  SELECT "clairview_pluginsourcefile"."id",
         "clairview_pluginsourcefile"."plugin_id",
         "clairview_pluginsourcefile"."filename",
         "clairview_pluginsourcefile"."source",
         "clairview_pluginsourcefile"."status",
         "clairview_pluginsourcefile"."transpiled",
         "clairview_pluginsourcefile"."error",
         "clairview_pluginsourcefile"."updated_at"
  FROM "clairview_pluginsourcefile"
  WHERE ("clairview_pluginsourcefile"."filename" = 'plugin.json'
         AND "clairview_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_without_index_ts_but_site_ts_works.1
  '''
  SELECT "clairview_pluginsourcefile"."id",
         "clairview_pluginsourcefile"."plugin_id",
         "clairview_pluginsourcefile"."filename",
         "clairview_pluginsourcefile"."source",
         "clairview_pluginsourcefile"."status",
         "clairview_pluginsourcefile"."transpiled",
         "clairview_pluginsourcefile"."error",
         "clairview_pluginsourcefile"."updated_at"
  FROM "clairview_pluginsourcefile"
  WHERE ("clairview_pluginsourcefile"."filename" = 'site.ts'
         AND "clairview_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_without_index_ts_but_site_ts_works.2
  '''
  SELECT COUNT(*) AS "__count"
  FROM "clairview_pluginsourcefile"
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_twice_from_zip_with_index_ts_replaced_by_frontend_tsx_works
  '''
  SELECT "clairview_pluginsourcefile"."id",
         "clairview_pluginsourcefile"."plugin_id",
         "clairview_pluginsourcefile"."filename",
         "clairview_pluginsourcefile"."source",
         "clairview_pluginsourcefile"."status",
         "clairview_pluginsourcefile"."transpiled",
         "clairview_pluginsourcefile"."error",
         "clairview_pluginsourcefile"."updated_at"
  FROM "clairview_pluginsourcefile"
  WHERE ("clairview_pluginsourcefile"."filename" = 'plugin.json'
         AND "clairview_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_twice_from_zip_with_index_ts_replaced_by_frontend_tsx_works.1
  '''
  SELECT "clairview_pluginsourcefile"."id",
         "clairview_pluginsourcefile"."plugin_id",
         "clairview_pluginsourcefile"."filename",
         "clairview_pluginsourcefile"."source",
         "clairview_pluginsourcefile"."status",
         "clairview_pluginsourcefile"."transpiled",
         "clairview_pluginsourcefile"."error",
         "clairview_pluginsourcefile"."updated_at"
  FROM "clairview_pluginsourcefile"
  WHERE ("clairview_pluginsourcefile"."filename" = 'index.ts'
         AND "clairview_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_twice_from_zip_with_index_ts_replaced_by_frontend_tsx_works.2
  '''
  SELECT COUNT(*) AS "__count"
  FROM "clairview_pluginsourcefile"
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_twice_from_zip_with_index_ts_replaced_by_frontend_tsx_works.3
  '''
  SELECT "clairview_pluginsourcefile"."id",
         "clairview_pluginsourcefile"."plugin_id",
         "clairview_pluginsourcefile"."filename",
         "clairview_pluginsourcefile"."source",
         "clairview_pluginsourcefile"."status",
         "clairview_pluginsourcefile"."transpiled",
         "clairview_pluginsourcefile"."error",
         "clairview_pluginsourcefile"."updated_at"
  FROM "clairview_pluginsourcefile"
  WHERE ("clairview_pluginsourcefile"."filename" = 'plugin.json'
         AND "clairview_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_twice_from_zip_with_index_ts_replaced_by_frontend_tsx_works.4
  '''
  SELECT "clairview_pluginsourcefile"."id",
         "clairview_pluginsourcefile"."plugin_id",
         "clairview_pluginsourcefile"."filename",
         "clairview_pluginsourcefile"."source",
         "clairview_pluginsourcefile"."status",
         "clairview_pluginsourcefile"."transpiled",
         "clairview_pluginsourcefile"."error",
         "clairview_pluginsourcefile"."updated_at"
  FROM "clairview_pluginsourcefile"
  WHERE ("clairview_pluginsourcefile"."filename" = 'frontend.tsx'
         AND "clairview_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_twice_from_zip_with_index_ts_replaced_by_frontend_tsx_works.5
  '''
  SELECT COUNT(*) AS "__count"
  FROM "clairview_pluginsourcefile"
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_with_subdir_works
  '''
  SELECT "clairview_pluginsourcefile"."id",
         "clairview_pluginsourcefile"."plugin_id",
         "clairview_pluginsourcefile"."filename",
         "clairview_pluginsourcefile"."source",
         "clairview_pluginsourcefile"."status",
         "clairview_pluginsourcefile"."transpiled",
         "clairview_pluginsourcefile"."error",
         "clairview_pluginsourcefile"."updated_at"
  FROM "clairview_pluginsourcefile"
  WHERE ("clairview_pluginsourcefile"."filename" = 'plugin.json'
         AND "clairview_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_with_subdir_works.1
  '''
  SELECT "clairview_pluginsourcefile"."id",
         "clairview_pluginsourcefile"."plugin_id",
         "clairview_pluginsourcefile"."filename",
         "clairview_pluginsourcefile"."source",
         "clairview_pluginsourcefile"."status",
         "clairview_pluginsourcefile"."transpiled",
         "clairview_pluginsourcefile"."error",
         "clairview_pluginsourcefile"."updated_at"
  FROM "clairview_pluginsourcefile"
  WHERE ("clairview_pluginsourcefile"."filename" = 'index.ts'
         AND "clairview_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '''
# ---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_with_subdir_works.2
  '''
  SELECT COUNT(*) AS "__count"
  FROM "clairview_pluginsourcefile"
  '''
# ---
